--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>FitnesSite</title>
     </head>
+    <body>
+        
+    </body>
 </html>
