--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="C:\Web\RepositoryFitnesSite\style.css">
         <title>FitnesSite</title>
     </head>
-    <body>
+    <body bgcolor="green" text="#fdd777">
         ывавыаыва
     </body>
 </html>
