проверка 5 на цвет

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" type="text/css" href="C:\Web\RepositoryFitnesSite\style.css">
         <title>FitnesSite</title>
     </head>
-    <body bgcolor="green" text="#fdd777">
-        ывавыаыва
+    <body>
+        <h1>ПРОВЕРКА 5</h1>
+        <p>потому что</p>
+        <p>ещё не придумали</p>
+        <p>дизайн</p>
     </body>
 </html>
