--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <title>FitnesSite</title>
     </head>
     <body>
-        <h1>ПРОВЕРКА 5</h1>
-        <p>потому что</p>
-        <p>ещё не придумали</p>
-        <p>дизайн</p>
+        <h1>ПРОВЕРКА 6</h1>
+        <p class="p">всё чики-пуки!</p>
     </body>
 </html>
