--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>FitnesSite</title>
     </head>
     <body>
-        <h1>ПРОВЕРКА 6</h1>
-        <p class="p">всё чики-пуки!</p>
+        <div>
+            <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
+        </div>
     </body>
 </html>
