--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>FitnesSite</title>
     </head>
     <body>
-        <div>
+        <div class="imgMain">
             <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
         </div>
     </body>
