сделал основной блок-шапку

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <title>FitnesSite</title>
     </head>
     <body>
-        <div class="imgMain">
-            <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
+        <div class="block1">
+            <div class="imgMain">
+                <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
+            </div>
         </div>
     </body>
 </html>
