--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <div class="block1">
-            <div class="imgMain">
-                <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
-            </div>
+            <center>
+                <div class="imgMain">
+                    <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
+                </div>
+            </center>
         </div>
     </body>
 </html>
