поменял местами class="imgMain"

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <div class="block1">
             <center>
-                <div class="imgMain">
-                    <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg" alt="">
+                <div>
+                    <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg"  class="imgMain">
                 </div>
             </center>
         </div>
