--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     </head>
     <body>
         <div class="block1">
-            <center>
-                <div>
-                    <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg"  class="imgMain">
-                </div>
-            </center>
+            <div>
+                <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg"
+                 class="imgMain">
+             </div>
         </div>
     </body>
 </html>
