--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>FitnesSite</title>
     </head>
     <body>
+        <div>
+            
+        </div>
         <div class="block1">
             <div>
                 <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg"
