--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <div>
             
         </div>
+        <div>
+            
+        </div>
         <div class="block1">
             <div>
                 <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg"
