--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>FitnesSite</title>
     </head>
     <body>
-        <div class="a">
+        <div class="b">
             
         </div>
         <div class="block1">
