--- a/reg/reg.html
+++ b/reg/reg.html
@@ -6,10 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="ico.ico">
 </head>
 <body>
+    <form action="">
+    <header class="header">
+        <div class="GW">
+            <p>GW</p>
+            <p class="w">Fitness</p><br>
+        </div>
+        <div class="aboutus"></div>
+    </header>
     <div class="cool">
+        <center>
+            <p>Регистрация</p>
+            <input type="email" class="email" placeholder="Email" name="" id=""><br><br>
+            <input type="password" class="pass" placeholder="Password" name="" id=""><br><br>
+            <input type="submit" class="Entrance" value="Войти"><br>
+            <a href="">Забыли почту/пароль?</a><br>
+            <a class="create" href="">Создать аккаунт</a>
+        </center>
         
+
+        </div>        
     </div>
+</form>
 </body>
 </html>
