--- a/reg/reg.html
+++ b/reg/reg.html
@@ -12,10 +12,21 @@
     <form action="">
     <header class="header">
         <div class="GW">
-            <p>GW</p>
-            <p class="w">Fitness</p><br>
+            <a class="lnk" style="text-decoration:none;" href="../index.html">GW
+                Fitness
+            </a>
         </div>
-        <div class="aboutus"></div>
+        <div class="aboutus">
+            <div class="alllink">
+            <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+            <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+            <a class="sq" style="text-decoration:none;" href="">SPA</a>
+            <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+            <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
+            <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
+            <a class="sq" style="text-decoration:none;" href="">РАСПИСАНИЕ</a>
+        </div>
+        </div>
     </header>
     <div class="cool">
         <center>
