--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="block1">
             <div>
-                <img src="C:\Web\RepositoryFitnesSite\eERXP9QgrMk.jpg"
+                <img src="eERXP9QgrMk.jpg"
                  class="imgMain">
              </div>
         </div>
