--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="C:\Web\RepositoryFitnesSite\style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>FitnesSite</title>
     </head>
     <body>
