--- a/reg/reg.html
+++ b/reg/reg.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="ico.ico">
 </head>
 <body>
-    <form action="">
     <header class="header">
         <div class="GW">
             <a class="lnk" style="text-decoration:none;" href="../index.html">GW
@@ -29,18 +28,21 @@
         </div>
     </header>
     <div class="cool">
+        <form action="">
         <center>
-            <p>Регистрация</p>
-            <input type="email" class="email" placeholder="Email" name="" id=""><br><br>
-            <input type="password" class="pass" placeholder="Password" name="" id=""><br><br>
+            
+            <br>
+            <p class="regi">Регистрация</p>
+            <input type="email" class="email" required placeholder="Email" name="email" id=""><br><br>
+            <input type="password" class="pass" required placeholder="Password" name="password" id=""><br><br>
             <input type="submit" class="Entrance" value="Войти"><br>
-            <a href="">Забыли почту/пароль?</a><br>
+            <a class="forgot" href="">Забыли почту/пароль?</a><br>
             <a class="create" href="">Создать аккаунт</a>
         </center>
         
 
+    </form>
         </div>        
     </div>
-</form>
 </body>
 </html>
