--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
         <title>FitnesSite</title>
     </head>
     <body>
+        <header class="header">
+            <div class="GW">
+                <a class="lnk" style="text-decoration:none;" href="index.html">GW
+                    Fitness
+                </a>
+            </div>
+            <div class="aboutus">
+                <div class="alllink">
+                <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+                <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+                <a class="sq" style="text-decoration:none;" href="">SPA</a>
+                <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+                <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
+                <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
+                <a class="sq" style="text-decoration:none;" href="">РАСПИСАНИЕ</a>
+            </div>
+            </div>
             
         </div>
         <div class="block1">
