--- a/reg/reg.html
+++ b/reg/reg.html
@@ -32,7 +32,7 @@
         <center>
             
             <br>
-            <p class="regi">Регистрация</p>
+            <p class="regi">Вход</p>
             <input type="email" class="email" required placeholder="Email" name="email" id=""><br><br>
             <input type="password" class="pass" required placeholder="Password" name="password" id=""><br><br>
             <input type="submit" class="Entrance" value="Войти"><br>
