--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -23,14 +23,13 @@
             <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-            <a class="sq" style="text-decoration:none;" href="">РАСПИСАНИЕ</a>
+            <a class="sq1" style="text-decoration:none;" href="">ВОЙТИ</a>
         </div>
         </div>
     </header>
     <div class="cool">
         <form action="">
         <center>
-            
             <br>
             <p class="regi">Вход</p>
             <input type="email" class="email" required placeholder="Email" name="email" id=""><br><br>
@@ -45,4 +44,9 @@
         </div>        
     </div>
 </body>
+<footer>
+    <div class="foot">
+        <a class="footlnk" style="text-decoration:none;" href="">О нас</a> <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
+    </div>
+</footer>
 </html>
