--- a/index.html
+++ b/index.html
@@ -20,16 +20,51 @@
                 <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
                 <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                 <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                <a class="sq" style="text-decoration:none;" href="">РАСПИСАНИЕ</a>
+                <a class="sq" style="text-decoration:none;" href="entrance/entrance.html">ВХОД</a>
             </div>
             </div>
             
         </div>
         <div class="block1">
             <div>
+                <div class="stock">
+                    <center>
+                    <p>ФИТНЕС</p>
+                    <p>ЗА 1410 Р</p>
+                    <p class="sas">В МЕСЯЦ</p>
+                </center>
+                </div>
                 <img src="eERXP9QgrMk.jpg"
                  class="imgMain">
              </div>
+        </div>
+        <div class="block2"><center>
+            <p class="P1">GW Fitness</p>
+            <p class="p2">Современный фитнес-клуб для всей семьи</p>
+        </center>
+         <div class="info">
+                <p class="info1">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
+
+                 <p class="info1">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
+          <div class="helpme">
+              <figure class="bus">
+                  <img class="img3" src="bus.jpg" alt="">
+                  <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
+              </figure>
+             <figure class="dum">
+                 <img class="img3" src="dum.jpg" alt="">
+                <figcaption>Студия единоборств и функционального тренинга</figcaption>
+               </figure>
+           <figure class="arm">
+                 <img class="img3" src="arm.png" alt="">
+                 <figcaption>Краткосрочные программы на результат (упругие ягодицы, восстановление опорно-двигательного аппарата, скоростные программы на похудение и др)</figcaption>
+              </figure>
+          </div>
+         </div>
+            </div>
+            <div class="hallimg">
+                <img class="img1" src="hall.jpg" alt="">
+            </div>
         </div>
     </body>
 </html>
