Создал кнопку подробнее

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                 <a class="sq" style="text-decoration:none;" href="entrance/entrance.html">ВХОД</a>
             </div>
             </div>
-            
         </div>
         <div class="block1">
             <div>
@@ -32,10 +31,12 @@
                     <p>ФИТНЕС</p>
                     <p>ЗА 1410 Р</p>
                     <p class="sas">В МЕСЯЦ</p>
-                </center>
+                    </center>
                 </div>
-                <img src="eERXP9QgrMk.jpg"
-                 class="imgMain">
+                <div class="buttonMore">
+                    <a class="linkMore" href="">Подробнее</a>
+                </div>
+                <img src="eERXP9QgrMk.jpg" class="imgMain">
              </div>
         </div>
         <div class="block2"><center>
