Выровнял все в block1

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         <div class="block1">
             <div>
                 <div class="stock">
-                    <center>
-                    <p>ФИТНЕС</p>
-                    <p>ЗА 1410 Р</p>
-                    <p class="sas">В МЕСЯЦ</p>
-                    </center>
+                    <p style="padding-left: 30px;">ФИТНЕС</p>
+                    <center><p>ЗА 1410 Р</p></center>
+                    <p style="padding-left: 140px;">В МЕСЯЦ</p>
                 </div>
                 <div class="buttonMore">
                     <a class="linkMore" href="">Подробнее</a>
