выровнял элементы и сделал читабельнее файл style

--- a/index.html
+++ b/index.html
@@ -37,32 +37,30 @@
                 <img src="eERXP9QgrMk.jpg" class="imgMain">
              </div>
         </div>
-        <div class="block2"><center>
-            <p class="P1">GW Fitness</p>
-            <p class="p2">Современный фитнес-клуб для всей семьи</p>
-        </center>
-         <div class="info">
-                <p class="info1">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
-
-                 <p class="info1">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
-          <div class="helpme">
-              <figure class="bus">
-                  <img class="img3" src="bus.jpg" alt="">
-                  <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
-              </figure>
-             <figure class="dum">
-                 <img class="img3" src="dum.jpg" alt="">
-                <figcaption>Студия единоборств и функционального тренинга</figcaption>
-               </figure>
-           <figure class="arm">
-                 <img class="img3" src="arm.png" alt="">
-                 <figcaption>Краткосрочные программы на результат (упругие ягодицы, восстановление опорно-двигательного аппарата, скоростные программы на похудение и др)</figcaption>
-              </figure>
-          </div>
-         </div>
-            </div>
+        <div>
+            <center>
+                <p style="font-size: 50px;">GW Fitness</p>
+                <p style="font-size: 38px;">Современный фитнес-клуб для всей семьи</p>
+            </center>
+        <div class="info">
+            <p style="padding-right: 100px;">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
+            <p style="padding-right: 100px;">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
             <div class="hallimg">
-                <img class="img1" src="hall.jpg" alt="">
+                <img style="width: 540px; height: 420px;" src="hall.jpg">
+            </div>
+            <div class="info2">
+                <figure class="bus">
+                    <img style="width: 50px;" src="bus.jpg">
+                    <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
+                </figure>
+                <figure class="dum">
+                    <img style="width: 50px;" src="dum.jpg">
+                    <figcaption>Студия единоборств и функционального тренинга</figcaption>
+                </figure>
+                <figure class="arm">
+                    <img style="width: 50px;" src="arm.png">
+                    <figcaption>Краткосрочные программы на результат</figcaption>
+                </figure>
             </div>
         </div>
     </body>
