сделал ещё более читабельнее файлы

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -8,20 +8,20 @@
     <body>
         <header class="header">
             <div class="GW">
-                <a class="lnk" style="text-decoration:none;" href="index.html">GW
+                <a class="GWlink" style="text-decoration:none;" href="index.html">GW
                     Fitness
                 </a>
             </div>
             <div class="aboutus">
                 <div class="alllink">
-                <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
-                <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
-                <a class="sq" style="text-decoration:none;" href="">SPA</a>
-                <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
-                <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
-                <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                <a class="sq" style="text-decoration:none;" href="entrance/entrance.html">ВХОД</a>
-            </div>
+                    <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+                    <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+                    <a class="sq" style="text-decoration:none;" href="">SPA</a>
+                    <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+                    <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
+                    <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
+                    <a class="sq" style="text-decoration:none;" href="entrance/entrance.html">ВХОД</a>
+                </div>
             </div>
         </div>
         <div class="block1">
@@ -34,7 +34,7 @@
                 <div class="buttonMore">
                     <a class="linkMore" href="">Подробнее</a>
                 </div>
-                <img src="eERXP9QgrMk.jpg" class="imgMain">
+                <img src="pictures\eERXP9QgrMk.jpg" class="imgMain">
              </div>
         </div>
         <div>
@@ -46,19 +46,19 @@
             <p style="padding-right: 100px;">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
             <p style="padding-right: 100px;">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
             <div class="hallimg">
-                <img style="width: 540px; height: 420px;" src="hall.jpg">
+                <img style="width: 540px; height: 420px;" src="pictures\hall.jpg">
             </div>
             <div class="info2">
                 <figure class="bus">
-                    <img style="width: 50px;" src="bus.jpg">
+                    <img style="width: 50px;" src="pictures\bus.jpg">
                     <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
                 </figure>
                 <figure class="dum">
-                    <img style="width: 50px;" src="dum.jpg">
+                    <img style="width: 50px;" src="pictures\dum.jpg">
                     <figcaption>Студия единоборств и функционального тренинга</figcaption>
                 </figure>
                 <figure class="arm">
-                    <img style="width: 50px;" src="arm.png">
+                    <img style="width: 50px;" src="pictures\arm.png">
                     <figcaption>Краткосрочные программы на результат</figcaption>
                 </figure>
             </div>
