тест фиксированной шапки

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -23,7 +23,7 @@
                     <a class="sq" style="text-decoration:none;" href="entrance/entrance.html">ВХОД</a>
                 </div>
             </div>
-        </div>
+        </header>
         <div class="block1">
             <div>
                 <div class="stock">
