--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -20,7 +20,7 @@
                     <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                    <a class="sq" style="text-decoration:none;" href="entrance/entrance.html">ВХОД</a>
+                    <a class="sq" style="text-decoration:none;" href="../entrance/entrance.html">ВХОД</a>
                 </div>
             </div>
         </header>
