--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="GW">
-            <a class="lnk" style="text-decoration:none;" href="../index.html">GW
+            <a class="lnk" style="text-decoration:none;" href="../MainPage/index.html">GW
                 Fitness
             </a>
         </div>
