--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>FitnesSite</title>
+        <link rel="icon" href="pictures/ico.ico">
     </head>
     <body>
         <header class="header">
