попроваил что-то

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -38,32 +38,38 @@
                 <img src="pictures\eERXP9QgrMk.jpg" class="imgMain">
              </div>
         </div>
-        <div>
+        <div class="block2">
             <center>
-                <p style="font-size: 50px;">GW Fitness</p>
-                <p style="font-size: 38px;">Современный фитнес-клуб для всей семьи</p>
+                <p style="font-size: 50px; padding-right: 100px;">GW Fitness</p>
+                <p style="font-size: 38px; padding-right: 100px">Современный фитнес-клуб для всей семьи</p>
             </center>
-        <div class="info">
-            <p style="padding-right: 100px;">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
-            <p style="padding-right: 100px;">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
-            <div class="hallimg">
-                <img style="width: 540px; height: 420px;" src="pictures\hall.jpg">
+            <div class="info">
+                <p style="padding-right: 100px;">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
+                <p style="padding-right: 100px;">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
+                <div class="img2">
+                    <img style="width: 540px; height: 420px;" src="pictures\hall.jpg">
+                </div>
+                <div class="info2">
+                    <figure class="bus">
+                        <img style="width: 50px;" src="pictures\bus.jpg">
+                        <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
+                    </figure>
+                    <figure class="dum">
+                        <img style="width: 50px;" src="pictures\dum.jpg">
+                        <figcaption>Студия единоборств и функционального тренинга</figcaption>
+                    </figure>
+                    <figure class="arm">
+                        <img style="width: 50px;" src="pictures\arm.png">
+                        <figcaption>Краткосрочные программы на результат</figcaption>
+                    </figure>
+                    <hr style="margin-top: 60px;"></hr>
+                </div>
             </div>
-            <div class="info2">
-                <figure class="bus">
-                    <img style="width: 50px;" src="pictures\bus.jpg">
-                    <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
-                </figure>
-                <figure class="dum">
-                    <img style="width: 50px;" src="pictures\dum.jpg">
-                    <figcaption>Студия единоборств и функционального тренинга</figcaption>
-                </figure>
-                <figure class="arm">
-                    <img style="width: 50px;" src="pictures\arm.png">
-                    <figcaption>Краткосрочные программы на результат</figcaption>
-                </figure>
-                <hr></hr>
-            </div>
+        </div>
+        <div class="block3">
+            <p style="font-size: 50px; padding-left: 60%;">ТРЕНАЖЕРНЫЙ ЗАЛ</p>
+            <p></p>
+            <img class="img3" src="pictures\image.png">
         </div>
     </body>
 </html>
