--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -9,27 +9,27 @@
     <link rel="icon" href="ico.ico">
 </head>
 <body>
-    <header class="header">
-        <div class="GW">
+    <div class="wrapper">
+        <header class="header">
+          <div class="GW">
             <a class="lnk" style="text-decoration:none;" href="../MainPage/index.html">GW
                 Fitness
             </a>
-        </div>
-        <div class="aboutus">
-            <div class="alllink">
+          </div>
+           <div class="aboutus">
             <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
             <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
             <a class="sq" style="text-decoration:none;" href="">SPA</a>
             <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-            <a class="sq1" style="text-decoration:none;" href="">ВОЙТИ</a>
-        </div>
-        </div>
-    </header>
-    <div class="cool">
-        <form action="">
-        <center>
+            <a class="sq" style="text-decoration:none; pointer-events: none;" href="">ВОЙТИ</a>
+           </div>
+         </header>
+     <div class="content">
+        <div class="main_content">
+             <form action="">
+            <center>
             <br>
             <p class="regi">Вход</p>
             <input type="email" class="email" required placeholder="Email" name="email" id=""><br><br>
@@ -37,16 +37,17 @@
             <input type="submit" class="Entrance" value="Войти"><br>
             <a class="forgot" href="">Забыли почту/пароль?</a><br>
             <a class="create" href="">Создать аккаунт</a>
-        </center>
-        
-
-    </form>
-        </div>        
+             </center>
+              </form>
+        </div>
+     </div>    
     </div>
+    <footer class="footer">
+        <div class="footer_content">
+            <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
+            <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
+            <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
+        </div>
+    </footer>    
 </body>
-<footer>
-    <div class="foot">
-        <a class="footlnk" style="text-decoration:none;" href="">О нас</a> <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
-    </div>
-</footer>
 </html>
