--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -62,13 +62,17 @@
                         <img style="width: 50px;" src="pictures\arm.png">
                         <figcaption>Краткосрочные программы на результат</figcaption>
                     </figure>
-                    <hr style="margin-top: 60px;"></hr>
+                    <hr style="margin-top: 4%;"></hr>
                 </div>
             </div>
         </div>
         <div class="block3">
-            <p style="font-size: 50px; padding-left: 60%;">ТРЕНАЖЕРНЫЙ ЗАЛ</p>
-            <p></p>
+            <p style="font-size: 50px; padding-left: 60%; margin-top: 10%">ТРЕНАЖЕРНЫЙ ЗАЛ</p>
+            <p style="font-size: 23px; padding-left: 60%; width: 500px;">
+                Отдельная группа кардио и силовых тренажеров, а также свободные веса. 
+                Оборудование от ведущих мировых производителей (Precor, Hoist и Matrix)
+                соответствует мировым стандартам качества и подходит как для опытных пользователей,
+                так и для новичков.</p>
             <img class="img3" src="pictures\image.png">
         </div>
     </body>
