начинаю делать 4 блок

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -62,7 +62,7 @@
                         <img style="width: 50px;" src="pictures\arm.png">
                         <figcaption>Краткосрочные программы на результат</figcaption>
                     </figure>
-                    <hr style="margin-top: 4%;"></hr>
+                    <hr style="margin-top: 4%; width: 1500px;"></hr>
                 </div>
             </div>
         </div>
@@ -74,6 +74,17 @@
                 соответствует мировым стандартам качества и подходит как для опытных пользователей,
                 так и для новичков.</p>
             <img class="img3" src="pictures\image.png">
+            <hr style="margin-top: 4%; width: 1500px;"></hr>
+        </div>
+        <div class="block4">
+            <p style="font-size: 50px; padding-left: 10%; margin-top: 10%">25-ТИ МЕТРОВЫЙ БАССЕЙН</p>
+            <p style="font-size: 23px; padding-left: 10%; width: 500px;">
+                В нашем клубе представлено 2 бассейна: для взрослых и детей. 
+                В водном комплексе проводится более 10 видов водных программ. 
+                Занятия в группах или индивидуально - с персональным тренером. 
+                Безупречное состояние воды обеспечивается за счёт метода комбинированнной системы обеззараживания, 
+                регулировки уровня PH и механической очистки воды.</p>
+            <img class="img4" src="">
         </div>
     </body>
 </html>
