--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -76,7 +76,7 @@
             <img class="img3" src="pictures\image.png">
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
-        <div class="block4">
+        <div class="block3">
             <p style="font-size: 50px; padding-left: 10%; margin-top: 10%">25-ТИ МЕТРОВЫЙ БАССЕЙН</p>
             <p style="font-size: 23px; padding-left: 10%; width: 500px;">
                 В нашем клубе представлено 2 бассейна: для взрослых и детей. 
@@ -84,7 +84,7 @@
                 Занятия в группах или индивидуально - с персональным тренером. 
                 Безупречное состояние воды обеспечивается за счёт метода комбинированнной системы обеззараживания, 
                 регулировки уровня PH и механической очистки воды.</p>
-            <img class="img4" src="">
+            <img class="img4" src="pictures\pool.png">
         </div>
     </body>
 </html>
