--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -77,7 +77,7 @@
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
         <div class="block3">
-            <p style="font-size: 50px; padding-left: 10%; margin-top: 10%">25-ТИ МЕТРОВЫЙ БАССЕЙН</p>
+            <p style="font-size: 50px; padding-left: 10%; margin-top: 2%">25-ТИ МЕТРОВЫЙ БАССЕЙН</p>
             <p style="font-size: 23px; padding-left: 10%; width: 500px;">
                 В нашем клубе представлено 2 бассейна: для взрослых и детей. 
                 В водном комплексе проводится более 10 видов водных программ. 
@@ -85,6 +85,7 @@
                 Безупречное состояние воды обеспечивается за счёт метода комбинированнной системы обеззараживания, 
                 регулировки уровня PH и механической очистки воды.</p>
             <img class="img4" src="pictures\pool.png">
+            <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
     </body>
 </html>
