начаинаю делать 5 блок

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -87,5 +87,8 @@
             <img class="img4" src="pictures\pool.png">
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
+        <div class="block4">
+            
+        </div>
     </body>
 </html>
