--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>FitnesSite</title>
-        <link rel="icon" href="pictures/ico.ico">
+        <link rel="icon" href="../pictures/ico.ico">
     </head>
     <body>
         <header class="header">
@@ -35,7 +35,7 @@
                 <div class="buttonMore">
                     <a class="linkMore" href="">Подробнее</a>
                 </div>
-                <img src="pictures\eERXP9QgrMk.jpg" class="imgMain">
+                <img src="../pictures/eERXP9QgrMk.jpg" class="imgMain">
              </div>
         </div>
         <div class="block2">
@@ -47,19 +47,19 @@
                 <p style="padding-right: 100px;">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
                 <p style="padding-right: 100px;">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
                 <div class="img2">
-                    <img style="width: 540px; height: 420px;" src="pictures\hall.jpg">
+                    <img style="width: 540px; height: 420px;" src="../pictures/hall.jpg">
                 </div>
                 <div class="info2">
                     <figure class="bus">
-                        <img style="width: 50px;" src="pictures\bus.jpg">
+                        <img style="width: 50px;" src="../pictures/bus.jpg">
                         <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
                     </figure>
                     <figure class="dum">
-                        <img style="width: 50px;" src="pictures\dum.jpg">
+                        <img style="width: 50px;" src="../pictures/dum.jpg">
                         <figcaption>Студия единоборств и функционального тренинга</figcaption>
                     </figure>
                     <figure class="arm">
-                        <img style="width: 50px;" src="pictures\arm.png">
+                        <img style="width: 50px;" src="../pictures/arm.png">
                         <figcaption>Краткосрочные программы на результат</figcaption>
                     </figure>
                     <hr style="margin-top: 4%; width: 1500px;"></hr>
@@ -73,7 +73,7 @@
                 Оборудование от ведущих мировых производителей (Precor, Hoist и Matrix)
                 соответствует мировым стандартам качества и подходит как для опытных пользователей,
                 так и для новичков.</p>
-            <img class="img3" src="pictures\image.png">
+            <img class="img3" src="../pictures/image.png">
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
         <div class="block3">
@@ -84,7 +84,7 @@
                 Занятия в группах или индивидуально - с персональным тренером. 
                 Безупречное состояние воды обеспечивается за счёт метода комбинированнной системы обеззараживания, 
                 регулировки уровня PH и механической очистки воды.</p>
-            <img class="img4" src="pictures\pool.png">
+            <img class="img4" src="../pictures/pool.png">
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
         <div class="block4">
