--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -28,7 +28,7 @@
          </header>
      <div class="content">
         <div class="main_content">
-             <form action="" onsubmit="window.open('../MainPage/index.html', '_self')" target="_blank">
+             <form action="" onsubmit="window.open('../MainpageReg/index.html', '_self')" target="_blank">
             <center>
             <br>
             <p class="regi">Вход</p>
