--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -88,7 +88,10 @@
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
         <div class="block4">
-            
+            <img class="img5" src="pictures\barbell.png">
+            <div>
+                <p style="font-size: 50px; padding-left: 10%; margin-top: -20%">Клубные карты</p>
+            </div>
         </div>
     </body>
 </html>
