--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -18,7 +18,7 @@
                     <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
                     <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
                     <a class="sq" style="text-decoration:none;" href="">SPA</a>
-                    <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+                    <a class="sq" style="text-decoration:none;" href="">АБОНЕМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
                     <a class="sq" style="text-decoration:none;" href="../entrance/entrance.html">ВХОД</a>
