--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -85,10 +85,9 @@
                 Безупречное состояние воды обеспечивается за счёт метода комбинированнной системы обеззараживания, 
                 регулировки уровня PH и механической очистки воды.</p>
             <img class="img4" src="../pictures/pool.png">
-            <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
         <div class="block4">
-            <img class="img5" src="pictures\barbell.png">
+            <img class="img5" src="C:\Web\RepositoryFitnesSite\pictures\barbell.png">
             <div>
                 <p style="font-size: 50px; padding-left: 10%; margin-top: -20%">Клубные карты</p>
             </div>
