--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -89,7 +89,7 @@
         <div class="block4">
             <img class="img5" src="C:\Web\RepositoryFitnesSite\pictures\barbell.png">
             <div>
-                <p style="font-size: 50px; padding-left: 10%; margin-top: -20%">Клубные карты</p>
+                <p style="font-size: 80px; padding-left: 37%; margin-top: -60%; color: white;">Клубные карты</p>
             </div>
         </div>
     </body>
