в процессе доделывания блока 4

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -89,7 +89,20 @@
         <div class="block4">
             <img class="img5" src="C:\Web\RepositoryFitnesSite\pictures\barbell.png">
             <div>
-                <p style="font-size: 80px; padding-left: 37%; margin-top: -60%; color: white;">Клубные карты</p>
+                <p style="font-size: 80px; padding-left: 32%; margin-top: -60%; color: white;">КЛУБНЫЕ КАРТЫ</p>
+                <p style="font-size: 43px; padding-left: 29%; margin-top: -2%; color: white;">Современный фитнес-клуб для всей семьи</p>
+                <div class="miniBlocks" style="margin-left: 5%; margin-top: 5%;">
+                    <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ + 2 МЕСЯЦА ЗАМОРОЗКИ</p>
+                    <P style="font-size: 25px; text-align: center;">Клуб</P>
+                </div>
+                <div class="miniBlocks" style="margin-left: 35%;">
+                    <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ</p>
+                    <p style="font-size: 25px; text-align: center;">sdfsdf</p>
+                </div>
+                <div class="miniBlocks" style="margin-left: 5%;">
+                    <p style="font-size: 35px; text-align: center; padding-top: 20px;">6 МЕСЯЦЕВ</p>
+                    <p style="font-size: 25px; text-align: center;">asdfsdf</p>
+                </div>
             </div>
         </div>
     </body>
