Создала шапку и стили к ней

--- a/UserAccount/Userpage/User.html
+++ b/UserAccount/Userpage/User.html
@@ -9,6 +9,25 @@
         <link rel="icon" href="../pictures/ico.ico">
     </head>
     <body>
-
+        <div class="wrapper">
+            <header class="header">
+                <div class="GW">
+                    <a class="GWlink" style="text-decoration:none;" href="../MainpageReg/index.html">GW
+                        Fitness
+                    </a>
+                </div>
+                <div class="aboutus">
+                    <div class="alllink">
+                        <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+                        <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+                        <a class="sq" style="text-decoration:none;" href="">SPA</a>
+                        <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+                        <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
+                        <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
+                        <a class="sq" style="text-decoration:none;" href="">USER</a>
+                    </div>
+                </div>
+            </header>
+        </div>
     </body>
 </html>
