--- a/sevices/services.html
+++ b/sevices/services.html
@@ -9,6 +9,14 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="header"></div>
+        <div class="wrapper">
+            <header class="header">
+              <div class="GW">
+                <a class="lnk" style="text-decoration:none;" href="../MainPage/index.html">GW
+                    Fitness
+                </a>
+              </div>
+            </header>
+        </div>
     </body>
 </html>
