Создала блок для фото юзера

--- a/UserAccount/Userpage/User.html
+++ b/UserAccount/Userpage/User.html
@@ -28,6 +28,13 @@
                     </div>
                 </div>
             </header>
+            <div class="content">
+                <div class="user_namephoto">
+                <div class="user_photo">
+                    <span>Фото профиля</span><br>
+                    <img class="user_onlyphoto" src="../pictures/you.jpg" alt="user">
+                </div>
+            </div>
         </div>
     </body>
 </html>
