--- a/sevices/services.html
+++ b/sevices/services.html
@@ -11,11 +11,20 @@
     <body>
         <div class="wrapper">
             <header class="header">
-              <div class="GW">
-                <a class="lnk" style="text-decoration:none;" href="../MainPage/index.html">GW
-                    Fitness
-                </a>
-              </div>
+                <div class="GW">
+                    <a class="lnk" style="text-decoration:none;" href="../MainPage/index.html">GW
+                        Fitness
+                    </a>
+                </div>
+                <div class="aboutus">
+                    <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+                    <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+                    <a class="sq" style="text-decoration:none;" href="">SPA</a>
+                    <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+                    <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
+                    <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
+                    <a class="sq" style="text-decoration:none; pointer-events: none;" href="">ВОЙТИ</a>
+                </div>
             </header>
         </div>
     </body>
