--- a/UserAccount/Userpage/User.html
+++ b/UserAccount/Userpage/User.html
@@ -34,6 +34,23 @@
                     <span>Фото профиля</span><br>
                     <img class="user_onlyphoto" src="../pictures/you.jpg" alt="user">
                 </div>
+                <div class="info">
+                    <div class="user_text">
+                        <span>Ваше имя: user123123</span>
+                    </div>
+                    <div class="user_text">
+                        <span>Ваша почта: forexample@gmail.yo</span>
+                    </div>
+                    <div class="user_text">
+                        <span>Возраст: не указан</span>
+                    </div>
+                    <div class="user_text">
+                        <span>Телосложение: апполонское</span>
+                    </div>
+                    <div class="user_text">
+                        <span>Назначенные программы: карта "Стандарт", карта "Утро", карта "Профи", карта "Бог Олимпа"</span>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
