--- a/UserAccount/Userpage/User.html
+++ b/UserAccount/Userpage/User.html
@@ -52,6 +52,17 @@
                     </div>
                 </div>
             </div>
+            <div class="buttons">
+                <div class="buttons">
+                    <button class="button1">Просмотр выполенных программ</button>
+                </div>
+                <div class="buttons">
+                    <button class="button1">Выбор программы</button>
+                </div>
+                <div class="buttons">
+                    <button class="button2"><a class="" href="../MainPage/index.html">Выход из профиля←</a> </button>
+                </div>
+            </div>
         </div>
     </body>
 </html>
