--- a/sevices/services.html
+++ b/sevices/services.html
@@ -38,5 +38,12 @@
                 </div>
             </div>
         </div>
+        <footer class="footer">
+            <div class="footer_content">
+                <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
+                <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
+                <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
+            </div>
+        </footer>
     </body>
 </html>
