Добавила кнопки footer и добавила класс aboutus

--- a/UserAccount/Userpage/User.html
+++ b/UserAccount/Userpage/User.html
@@ -62,5 +62,12 @@
                 <button class="button2"><a class="" href="../MainPage/index.html">Выход из профиля←</a> </button>
             </div>
         </div>
+        <footer class="footer">
+            <div class="footer_content">
+                <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
+                <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
+                <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
+            </div>
+        </footer>
     </body>
 </html>
