доделал мини-блоки

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -93,15 +93,15 @@
                 <p style="font-size: 43px; padding-left: 29%; margin-top: -2%; color: white;">Современный фитнес-клуб для всей семьи</p>
                 <div class="miniBlocks" style="margin-left: 5%; margin-top: 5%;">
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ + 2 МЕСЯЦА ЗАМОРОЗКИ</p>
-                    <P style="font-size: 25px; text-align: center;">Клуб</P>
+                    <P style="font-size: 25px; text-align: center;">Клубное членство</P>
                 </div>
-                <div class="miniBlocks" style="margin-left: 35%;">
+                <div class="miniBlocks" style="margin-left: 37%; margin-top: -285px;">
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ</p>
-                    <p style="font-size: 25px; text-align: center;">sdfsdf</p>
+                    <p style="font-size: 25px; text-align: center;">Утро + день</p>
                 </div>
-                <div class="miniBlocks" style="margin-left: 5%;">
+                <div class="miniBlocks" style="margin-left: 70%; margin-top: -285px;">
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">6 МЕСЯЦЕВ</p>
-                    <p style="font-size: 25px; text-align: center;">asdfsdf</p>
+                    <p style="font-size: 25px; text-align: center;">Клубное членство</p>
                 </div>
             </div>
         </div>
