--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -36,7 +36,7 @@
             <input type="password" class="pass" required placeholder="Password" name="password" id=""><br><br>
             <input type="submit" class="Entrance" value="Войти"><br>
             <a class="forgot" href="">Забыли почту/пароль?</a><br>
-            <a class="create" href="../MainPageReg/index.html">Создать аккаунт</a>
+            <a class="create" href="../Create.html">Создать аккаунт</a>
             </center>
             </form>
         </div>
