Подправил работу ссылок

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -21,7 +21,7 @@
                     <a class="sq" style="text-decoration:none;" href="">АБОНЕМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                    <a class="sq" style="text-decoration:none;" href="../Create.html">ВХОД</a>
+                    <a class="sq" style="text-decoration:none;" href="../New_folder/Create.html">ВХОД</a>
                 </div>
             </div>
         </header>
