--- a/MainpageReg/index.html
+++ b/MainpageReg/index.html
@@ -22,7 +22,7 @@
                     <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                    <a class="sq" style="text-decoration:none;" href="">USER</a>
+                    <a class="sq" style="text-decoration:none;" href="../UserAccount/User.html">USER</a>
                 </div>
             </div>
         </header>
